--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -18,6 +18,7 @@
 @import "./components/emoTable";
 @import "./components/form";
 @import "./components/progressBar";
+@import "./components/table";
 
 @import './layout/header.scss';
 @import './layout/headerLogined';
