--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -4,10 +4,11 @@
     padding: 4px 16px;
     color: $white;
     font-size: 16px;
-    font-weight: bold;
+    font-weight: 400;
 }
 .c-btn:hover {
     color: $white;
+    font-weight: bold;
     box-shadow: 2px 2px 4px rgba(112, 132, 136, 0.5);
 }
 
@@ -204,4 +205,16 @@
     .btn-free-circle-hover {
         display: block;
     }
+}
+
+// 紀錄頁 分享、刪除 按鈕
+.c-btn-icon {
+    padding: 4px 12px;
+    background-color: $white;
+    color: $main;
+}
+.c-btn-icon:hover {
+    background-color: $main-tint01;
+    color: $white;
+    box-shadow: 2px 2px 4px rgba(112, 132, 136, 0.5);
 }
