--- a/assets/scss/setting/_base.scss
+++ b/assets/scss/setting/_base.scss
@@ -30,3 +30,17 @@ h2 {
 textarea {
     min-height: 170px;
 }
+
+// date 文字的顏色透明度
+input[type="date"]::-webkit-datetime-edit {
+    opacity: 0.8;
+}
+// date icon的顏色透明度
+input[type="date"]::-webkit-calendar-picker-indicator {
+    opacity: 0.6;
+}
+/* date 年月份「斜線」 */
+input[type="date"]::-webkit-datetime-edit-text {
+    color: $gray-500; 
+    padding: 6px;
+}
