Modified header.ejs & footer.ejs

--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -8,7 +8,7 @@
     color: $white;
   }
   ul, span {
-    margin-right: 8px;
+    // margin-right: 8px;
     padding-left: 0;
     color: $white;
     font-size: 14px;
