--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,23 +1,57 @@
 <footer class="footer py-48">
-    <div class="container d-flex">
-        <div class="logo me-96">
-            <a href="home.html">
-                <img src="../assets/images/logo_footer.svg" alt="logo">
-            </a>
-        </div>
-        <div class="d-flex pt-24">
-            <div class="me-72">
+    <div class="container">
+        <div class="row gap-40">
+            <!-- logo -->
+            <div class="col-2">
+                <!-- <a href="home.html"> -->
+                    <img class="w-50" src="../assets/images/logo_footer.svg" alt="logo">
+                <!-- </a> -->
+            </div>
+            <!-- Developers -->
+            <div class="col-3">
                 <h3>開發群</h3>
-                <ul class="d-flex">
-                    <li class="me-16">Elma Yu</li>
-                    <li class="me-16">Leon Wu</li>
-                    <li>Espoir Fang</li>
+                <ul>
+                    <li class="mb-4">
+                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/"  target="_blank">
+                            <span>Product Manager</span>
+                            <span>Shu-Ping Yu</span>
+                        </a>
+                    </li>
+                    <li class="mb-4">
+                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/"  target="_blank">
+                            <span>Product Designer</span>
+                            <span>Shu-Ping Yu</span>
+                        </a>
+                    </li>
+                    <li class="mb-4">
+                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/"  target="_blank">
+                            <span>Front-End Engineer</span>
+                            <span>Shu-Ping Yu</span>
+                        </a>
+                    </li>
+                    <li class="mb-4 d-flex justify-content-between">
+                        <span>Front-End Consultant</span>
+                        <span>Wei-Kai Lin</span>
+                    </li>
+                    <li class="mb-4">
+                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/techleon/"  target="_blank">
+                            <span>Back-End Developer</span>
+                            <span>Leon Wu</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="d-flex justify-content-between" href="https://a8607125167.wixsite.com/mysite/about"  target="_blank">
+                            <span>Illustrator</span>
+                            <span>Yi-Wen Fang</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
-            <div class="me-72">
-                <a href="mailto:wave_emocards@gmail.com">
+            <!-- Contact -->
+            <div class="col-3">
+                <a href="mailto:info@wavemocards.com">
                     <h3>聯絡我們</h3>
-                    <span>wave_emocards@gmail.com</span>
+                    <span>info@wavemocards.com</span>
                 </a>
             </div>
         </div>
