--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -5,6 +5,9 @@
         </h1>
         <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
             <li>
+                <a href="aboutEmotions.html" class="px-4 py-8 link-gray-550">關於情緒</a>
+            </li>
+            <li class="ms-20">
                 <a href="login.html" class="btn btn-main c-btn">登入</a>
             </li>
             <li class="ms-16">
