Added Quote of Illustration

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -21,7 +21,7 @@
 @import "./components/table";
 
 @import './layout/header.scss';
-@import './layout/headerLogined';
+@import './layout/headerLoggedIn';
 @import './layout/footer.scss';
 
 
