--- a/layout/headerLoggedIn.ejs
+++ b/layout/headerLoggedIn.ejs
@@ -1,4 +1,4 @@
-<header class="header h-logined sticky-top">
+<header class="header h-logined fixed-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1>
             <a href="home.html" id="home">浪潮情緒卡</a>
