Modified logout button

--- a/layout/headerLoggedIn.ejs
+++ b/layout/headerLoggedIn.ejs
@@ -23,7 +23,7 @@
                 </a>
             </li>
             <li class="ms-16">
-                <a href="logout.html" class="logout" id="logout">
+                <a href="#" class="logout" id="logout">
                     <i class="bi bi-door-closed-fill"></i>
                     <i class="bi bi-door-open-fill"></i>
                 </a>
