--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -16,6 +16,10 @@ label {
     background-color: $gray-300;
     border: 4px solid $gray-500;
     border-radius: 50%;
+
+    img {
+        object-fit: cover;
+    }
 }
 .btn-add {
     position: absolute;
