Modified floatButton.ejs & floatButtons.ejs

--- a/layout/floatButton.ejs
+++ b/layout/floatButton.ejs
@@ -1,10 +1,8 @@
 <!-- 浮動按鈕 -->
-<div class="fixed-bottom">
-    <div class="me-8 mb-12 d-flex justify-content-end">
-        <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center"
-        style="width: 60px; height: 60px;">
-                <img src="../assets/images/backToTop.svg" alt="top">
-                <span class="text-white fs-10 fw-bold">TOP</span>
-        </a>
-    </div>
+<div class="me-12 mb-12" style="width: 60px; position: fixed; right: 0; bottom: 0; z-index: 1030;">
+    <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center"
+    style="width: 60px; height: 60px;">
+            <img src="../assets/images/backToTop.svg" alt="top">
+            <span class="text-white fs-10 fw-bold">TOP</span>
+    </a>
 </div>
