--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,16 +1,16 @@
 <header class="header sticky-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1 id="home">
-            <a href="index.html">浪潮情緒卡</a>
+            <a href="index.html"data-bs-toggle="tooltip" data-bs-placement="bottom" title="回到首頁">浪潮情緒卡</a>
         </h1>
         <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
-            <li>
+            <li data-bs-toggle="tooltip" data-bs-placement="bottom" title="認識情緒與情緒卡">
                 <a href="aboutEmotions.html" class="px-4 py-8 link-gray-550">關於情緒</a>
             </li>
-            <li class="ms-20">
+            <li class="ms-20" data-bs-toggle="tooltip" data-bs-placement="bottom" title="登入">
                 <a href="login.html" class="btn btn-main c-btn">登入</a>
             </li>
-            <li class="ms-16">
+            <li class="ms-16" data-bs-toggle="tooltip" data-bs-placement="bottom" title="註冊">
                 <a href="signup.html" class="btn btn-pink c-btn">註冊</a>
             </li>
         </ul>
