--- a/layout/headerLoggedIn.ejs
+++ b/layout/headerLoggedIn.ejs
@@ -1,29 +1,29 @@
 <header class="header h-logined fixed-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1>
-            <a href="home.html" id="home">浪潮情緒卡</a>
+            <a href="home.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="回到首頁">浪潮情緒卡</a>
         </h1>
         <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
             <li>
-                <a href="aboutEmotions.html" class="px-4 py-8" id="aboutEmotions">認識情緒</a>
+                <a href="aboutEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="認識情緒與情緒卡">認識情緒</a>
             </li>
             <li class="ms-16">
-                <a href="findMyEmotions.html" class="px-4 py-8" id="findMyEmotions">找尋我的情緒</a>
+                <a href="findMyEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="選擇與紀錄我的情緒">找尋我的情緒</a>
             </li>
             <li class="ms-16">
-                <a href="myRecords.html" class="px-4 py-8" id="myRecords">我的紀錄</a>
+                <a href="myRecords.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看我的情緒紀錄與分析">我的紀錄</a>
             </li>
             <li class="ms-16">
-                <a href="sharedByOthers.html" class="px-4 py-8" id="sharedByOthers">他人的分享</a>
+                <a href="sharedByOthers.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看他人分享的情緒紀錄">他人的分享</a>
             </li>
             <li class="ms-16">
-                <a href="account.html" class="profile" id="profile">
+                <a href="account.html" class="profile" data-bs-toggle="tooltip" data-bs-placement="bottom" title="管理我的帳戶">
                     <i class="bi bi-person-fill"></i>
                     <i class="bi bi-person-fill-gear"></i>
                 </a>
             </li>
             <li class="ms-16">
-                <a href="#" class="logout" id="logout">
+                <a href="#" class="logout" data-bs-toggle="tooltip" data-bs-placement="bottom" title="登出">
                     <i class="bi bi-door-closed-fill"></i>
                     <i class="bi bi-door-open-fill"></i>
                 </a>
