--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -1,3 +1,16 @@
+// hamburger btn
+.btn-hamburger {
+    background-color: $white;
+    color: $main-tint01;
+}
+.btn-hamburger:hover {
+    background-color: $main-tint01;
+    color: $white;
+}
+.btn-hover-main-tint02:hover {
+    background-color: $main-tint02;
+}
+
 // c -> ｃustomization
 .c-btn {
     border-radius: 100px;
