--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -647,11 +647,13 @@ $font-sizes: (
   4: $h3-font-size,  // 28px
   5: $h4-font-size,  // 24px
   6: $h5-font-size,  // 20px
-  7: $font-size-base * 1.125, // $h6-font-size, // 18px
-  8: $h6-font-size,  // 16px
-  9: $font-size-base * 0.875, // 14px
-  10: $font-size-base * 0.75, // 12px
-  11: $font-size-base * 0.625 //10px
+  7: $font-size-base * 1.125,  // $h6-font-size, // 18px
+  8: $h6-font-size,            // 16px
+  9: $font-size-base * 0.875,  // 14px
+  10: $font-size-base * 0.75,  // 12px
+  11: $font-size-base * 0.625, // 10px
+  large: $font-size-base * 6,     // 96px
+  extra: $font-size-base * 8   // 128px
 
 ) !default;
 // scss-docs-end font-sizes
