--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -3,11 +3,11 @@
         <h1 id="home">
             <a href="index.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="回到首頁">浪潮情緒卡</a>
         </h1>
-        <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
+        <ul class="d-flex justify-content-end justify-content-md-between align-items-center mb-0 ps-0">
             <li class="d-none d-md-block " data-bs-toggle="tooltip" data-bs-placement="bottom" title="認識情緒與情緒卡">
                 <a href="aboutEmotions.html" class="px-4 py-8 link-gray-550">關於情緒</a>
             </li>
-            <li class="ms-20 text-nowrap" data-bs-toggle="tooltip" data-bs-placement="bottom" title="登入">
+            <li class="d-none d-md-block ms-20 text-nowrap" data-bs-toggle="tooltip" data-bs-placement="bottom" title="登入">
                 <a href="login.html" class="btn btn-main c-btn">登入</a>
             </li>
             <li class="d-none d-md-block ms-16" data-bs-toggle="tooltip" data-bs-placement="bottom" title="註冊">
@@ -21,7 +21,10 @@
                     <div class="p-0 card card-body rounded-2 border-0 bg-main-tint03" style="width: 120px;">
                         <ul>
                             <li>
-                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="signup.himl">註冊</a>
+                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="login.html">登入</a>
+                            </li>
+                            <li>
+                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="signUp.html">註冊</a>
                             </li>
                             <li>
                                 <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="aboutEmotions.html">認識情緒</a>
