Added RWD at login & signUp page

--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -14,20 +14,20 @@
                 <a href="signUp.html" class="btn btn-pink c-btn">註冊</a>
             </li>
             <li class="d-md-none ms-16 position-relative">
-                <button class="px-8 py-4 btn btn-white btn-hamburger border border-main-tint01 rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <button class="px-8 py-4 btn btn-main btn-hamburger border-0 rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <i class="bi bi-list"></i>
                 </button>
                 <div class="collapse" style="position: absolute; right: 0; top: 40px;" id="collapseExample">
-                    <div class="p-0 card card-body rounded-2 border-0 bg-main-tint03" style="width: 120px;">
+                    <div class="p-0 card card-body rounded-2 border border-main-tint01" style="width: 120px;">
                         <ul>
                             <li>
-                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="login.html">登入</a>
+                                <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="login.html">登入</a>
                             </li>
                             <li>
-                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="signUp.html">註冊</a>
+                                <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="signUp.html">註冊</a>
                             </li>
                             <li>
-                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="aboutEmotions.html">認識情緒</a>
+                                <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="aboutEmotions.html">認識情緒</a>
                             </li>
                         </ul>
                     </div>
