--- a/assets/scss/pages/_login.scss
+++ b/assets/scss/pages/_login.scss
@@ -72,3 +72,13 @@
         color: $pink;
     }
 }
+
+.box-50 {
+    width: 50%;
+}
+// tablet 平板
+@media(max-width:992px){
+    .box-50 {
+        width: 100%;
+    }
+}
