--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -13,7 +13,7 @@
             <li class="d-none d-md-block ms-16" data-bs-toggle="tooltip" data-bs-placement="bottom" title="註冊">
                 <a href="signUp.html" class="btn btn-pink c-btn">註冊</a>
             </li>
-            <li class="d-md-none ms-16 position-relative">
+            <li class="d-md-none position-relative">
                 <button class="px-8 py-4 btn btn-main btn-hamburger border-0 rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <i class="bi bi-list"></i>
                 </button>
