--- a/assets/scss/components/_boxes.scss
+++ b/assets/scss/components/_boxes.scss
@@ -5,7 +5,7 @@
 .box-account-img {
     width: 25%;
 }
-.box-account-text {
+.box-resetPwd-text {
     width: 50%;
 }
 
@@ -18,5 +18,11 @@
     }
     .box-account-text {
         width: 80%;
+    }
+}
+
+@media(max-width:767px){
+    .box-resetPwd-text {
+        width: 100%;
     }
 }
