--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -14,7 +14,7 @@
                 <a href="signUp.html" class="btn btn-pink c-btn" id="aHeader">註冊</a>
             </li>
             <li class="d-md-none position-relative">
-                <button class="px-8 py-4 btn btn-main btn-hamburger border-0 rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <button class="px-8 py-4 btn btn-outline-main rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <i class="bi bi-list"></i>
                 </button>
                 <div class="collapse" style="position: absolute; right: 0; top: 40px;" id="collapseExample">
