--- a/assets/scss/components/_titleBar.scss
+++ b/assets/scss/components/_titleBar.scss
@@ -1,6 +1,7 @@
 .titleBar {
-    padding: 32px 0 8px 0;
-    margin-bottom: 24px;
+    // padding: 32px 0 8px 0;
+    padding: 0 0 8px 0;
+    // margin-bottom: 24px;
     border-bottom: 2px solid $main-tint02;
     h2 {
         font-size: 32px;
