Added RWD at pages about emo story

--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -1,6 +1,7 @@
 // 分類卡 & 小卡
 .class-card {
     min-width: 236px;
+    max-width: 236px;
     height: 140px;
     display: flex;
     margin-bottom: 16px;
