--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -101,11 +101,17 @@ input[type="radio"]:checked+label{
 }
 
 // 搜尋列
+.box-date {
+    width: 50%;
+}
 .input-date {
-    width: 180px;
+    width: 48%;
+}
+.box-searchBar {
+    width: 50%;
 }
 .search-bar {
-    width: 480px;
+    width: 90%;
     padding-left: 48px;
     height: 40px;
     border: 0;
@@ -115,4 +121,30 @@ input[type="radio"]:checked+label{
 }
 input[type=search]::placeholder {
     color: $main-tint01;
+}
+@media(max-width:768px) {
+    .input-date {
+        width: 48%;
+    }
+    .box-searchBar {
+        width: 100%;
+    }
+    .search-bar {
+        width: 90%;
+    }
+}
+@media(max-width:576px) {
+    .search-bar {
+        width: 74%;
+    }
+}
+
+// 我的紀錄｜情緒故事
+.bg-content-gray-200 {
+    background-color: $white;
+}
+@media(max-width:992px) {
+    .bg-content-gray-200 {
+        background-color: $gray-200;
+    }
 }
