--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -313,6 +313,7 @@ $main-tint01:    #85C5D6;
 $main-tint02:    #B1DBE5;
 $main-tint03:    #E6F6FA;
 $main-dark:      #417C88;
+$main-dark02:      #254F57;
 $pink:           #C37979;
 $pink-tint01:    #D89591;
 $pink-tint02:    #E8B0AC;
@@ -343,6 +344,7 @@ $theme-colors: (
   "main-tint02":     $main-tint02,
   "main-tint03":     $main-tint03,
   "main-dark":       $main-dark,
+  "main-dark02":     $main-dark02,
   "pink":            $pink,
   "pink-tint01":     $pink-tint01,
   "pink-tint02":     $pink-tint02,
