--- a/assets/scss/helper/_base.scss
+++ b/assets/scss/helper/_base.scss
@@ -54,3 +54,21 @@ input[type="date"]::-webkit-datetime-edit-text {
     color: $gray-500; 
     padding: 6px;
 }
+
+$font-family-sans-serif:
+    Roboto,
+    system-ui,
+    -apple-system,
+    "Segoe UI",
+    "Helvetica Neue",
+    "Noto Sans",
+    "Liberation Sans",
+    Arial,
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji";
+
+$line-height-base: 1.2;
+$line-height-lg: 1.5;
