--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -28,6 +28,7 @@
     border: 2px solid $main;
     border-radius: 100px;
     padding: 4px 16px;
+    background-color: $white;
     color: $main;
     font-size: 16px;
     font-weight: bold;
@@ -41,11 +42,13 @@
     border: 2px solid $main-tint01;
     border-radius: 100px;
     padding: 4px 16px;
+    background-color: $white;
     color: $main;
     font-size: 16px;
     font-weight: bold;
 }
 .c-btn-outline-main-tint01:hover {
+    background-color: $main-tint01;
     color: $main-dark02;
     box-shadow: 2px 2px 4px rgba(112, 132, 136, 0.5);
 }
@@ -87,20 +90,20 @@
 }
 
 // Be used in aboutEmotions, emotionCardsClassified
+.btn-disable {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: not-allowed;
+    border-radius: 100px;
+    padding: 4px 12px;
+    background-color: $gray-300;
+    border: 2px solid $gray-300;
+    color: $gray-500;
+    font-size: 16px;
+    font-weight: bold;
+}
 .nav-btn {
-    .btn-disable {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: not-allowed;
-        border-radius: 100px;
-        padding: 4px 8px;
-        background-color: $gray-300;
-        border: 2px solid $gray-300;
-        color: $gray-500;
-        font-size: 16px;
-        font-weight: bold;
-    }
     .btn-gray-500:hover {
         background-color: $gray-400;
     }
