--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -79,6 +79,14 @@
     color: $white;
     box-shadow: 2px 2px 4px rgba(112, 132, 136, 0.5);
 }
+.c-btn-outline-pink-tint02-tooltip {
+    border: 2px solid $pink-tint02;
+    background-color: $white;
+    border-radius: 100px;
+    color: $pink-tint02;
+    font-size: 16px;
+    font-weight: bold;
+}
 
 // float button
 .floatButton {
@@ -133,6 +141,7 @@
 // 找尋我的情緒頁 按鈕
 .btn-find {
     border: 4px solid $main;
+    background-color: $white;
     color: $main;
     font-size: 36px;
     // padding: 24px 28px;
